--- a/index.html
+++ b/index.html
@@ -1,3 +1,31 @@
 <html>
+
+<h1>2025.11.15</h1>
+<h2>Who am I?</h2>
+  I am currently a refugee seeker in Serbia. I think Serbia is shit. It's full of words only and no action. This is a country of show. Showman. They show brand/outer appearances, and no real action. I hate this country. I think it's a weak country, I think I can take over this place. 
+  <br>
 I’m going to take over Serbia. I need quantum etc. I’ll post projects here. I need artificial life.
+<br>
+  <h2>Things I think I'll need</h2>
+  <ul>
+    <li>Maths</li>
+    <li>Math Engineering</li>
+    <li>Physics</li>
+    <li>Computer Science</li>
+    <li>AI</li>
+    <li>Quantum AI</li>
+    <li>Bioquantum Computers</li>
+    <li>Artificial Life</li>
+    <li>Robots</li>
+    <li>Molecular assemblers/universal constructors</li>
+    <li>automated maths</li>
+    <li>hacking/reverse engineering etc. hacking is very important</li>
+    <li>mobile/apps/bci/merging with tech etc. </li>
+    <li>robots</li>
+    <li>p2p/my own internet/eris net etc. </li>
+    <li>slime mold</li>
+    
+    
+  </ul>
+  
 </html> 
