Fix formatting in index.html list items

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <li>robots</li>
     <li>p2p/my own internet/eris net etc. </li>
     <li>slime mold</li>
-    
+    <li>etc.</li>
     
   </ul>
   
