--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <li>p2p/my own internet/eris net etc. </li>
     <li>slime mold</li>
     <li>etc.</li>
-    
   </ul>
+
+  <p>It is just essential to have a much stronger wifi (hack the routers, spoofing/hardware or get satelite dishes on abandoned buildings/p2p etc.). And for me to understand hacking/reverse engineering, how computers work/wifi/bottom up computing/computers/bioquantum computers/maths/physics/cs/ai etc. there are so many things that I'm lacking at. nand to tetris, nand to jjsploit, nand to synapsex etc. Robots/mobile app programming etc. I need to build robots/exosuits etc. </p>
   
 </html> 
