Add paragraph on learning and project plans
Added a new paragraph about learning and project plans.

--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
   </ul>
 
   <p>It is just essential to have a much stronger wifi (hack the routers, spoofing/hardware or get satelite dishes on abandoned buildings/p2p etc.). And for me to understand hacking/reverse engineering, how computers work/wifi/bottom up computing/computers/bioquantum computers/maths/physics/cs/ai etc. there are so many things that I'm lacking at. nand to tetris, nand to jjsploit, nand to synapsex etc. Robots/mobile app programming etc. I need to build robots/exosuits etc. </p>
+  <p>Maybe the plan now is... To just keep on learning. make fun projects etc. mobile apps/ERIsNet/hack roblox/maths/physics/cs/ai etc. keep on learning. I can do this.</p>
   
 </html> 
