--- a/index.html
+++ b/index.html
@@ -27,5 +27,11 @@
 
   <p>It is just essential to have a much stronger wifi (hack the routers, spoofing/hardware or get satelite dishes on abandoned buildings/p2p etc.). And for me to understand hacking/reverse engineering, how computers work/wifi/bottom up computing/computers/bioquantum computers/maths/physics/cs/ai etc. there are so many things that I'm lacking at. nand to tetris, nand to jjsploit, nand to synapsex etc. Robots/mobile app programming etc. I need to build robots/exosuits etc. </p>
   <p>Maybe the plan now is... To just keep on learning. make fun projects etc. mobile apps/ERIsNet/hack roblox/maths/physics/cs/ai etc. keep on learning. I can do this.</p>
+<h1>2025.11.15, 10:31 PM</h1>
+  <p>I am losing hope. I hate the guards in this refugee camp of serbia. i will kill all of them. I'll kill the shit out of all them. I hate them all. they're all liars/showmen etc.</p>
+  <p>I need more knowledge etc. </p>
+  <p>around SJTU time, around 2023, when i was kicked and dropped out from BIT (they didn't kick, but i dropped out before i think would), i thought to myself of using HigherERIs as my meaning. complexities etc. to keep on learning. anything/anything, everything/everything. my own anything/anything, my own everything/everything.</p>
+  <p>I need faster internet. firstly, just hack the shit out of them maybe. And as I dedicate my life to learning random things/maths/physics/cs/ai/bci etc., i will be bound to encounter erisnet/p2p, shimeji/companions etc. i will treat this like a triple/quadruple degree etc. I'll keep going. </p>
+  <p>I will spend my life/time learning maths etc. </p>
   
 </html> 
