--- a/index.html
+++ b/index.html
@@ -33,5 +33,8 @@
   <p>around SJTU time, around 2023, when i was kicked and dropped out from BIT (they didn't kick, but i dropped out before i think would), i thought to myself of using HigherERIs as my meaning. complexities etc. to keep on learning. anything/anything, everything/everything. my own anything/anything, my own everything/everything.</p>
   <p>I need faster internet. firstly, just hack the shit out of them maybe. And as I dedicate my life to learning random things/maths/physics/cs/ai/bci etc., i will be bound to encounter erisnet/p2p, shimeji/companions etc. i will treat this like a triple/quadruple degree etc. I'll keep going. </p>
   <p>I will spend my life/time learning maths etc. </p>
+
+  <h1>2025.11.15, 10:44 PM</h1>
+  <p>Change of mindset. I am under a scholarship. Quadruple degree. I'm not a refugee. I'm studying in Serbia, fully funded, free shelter, free food, shit guards. This is prestigious. I will learn my own maths/physics/cs/ai etc. dedicate everything to higher eris etc. keep on fighting.</p>
   
 </html> 
