--- a/index.html
+++ b/index.html
@@ -36,5 +36,6 @@
 
   <h1>2025.11.15, 10:44 PM</h1>
   <p>Change of mindset. I am under a scholarship. Quadruple degree. I'm not a refugee. I'm studying in Serbia, fully funded, free shelter, free food, shit guards. This is prestigious. I will learn my own maths/physics/cs/ai etc. dedicate everything to higher eris etc. keep on fighting.</p>
+  <p>the best way to study is probably by making projects. I must always use projects. nand to tetris/maths etc. i'll do it</p>
   
 </html> 
