Update index.html with new reflections
Added new content reflecting personal thoughts and experiences.

--- a/index.html
+++ b/index.html
@@ -37,5 +37,7 @@
   <h1>2025.11.15, 10:44 PM</h1>
   <p>Change of mindset. I am under a scholarship. Quadruple degree. I'm not a refugee. I'm studying in Serbia, fully funded, free shelter, free food, shit guards. This is prestigious. I will learn my own maths/physics/cs/ai etc. dedicate everything to higher eris etc. keep on fighting.</p>
   <p>the best way to study is probably by making projects. I must always use projects. nand to tetris/maths etc. i'll do it</p>
-  
+
+  <h1>2026.1.1, 10:38 pm</h1>
+  <p>The serbs, not all are shit. Not all should die. only some, especially some. a palantr system needs to be there. i've become too lazy too. too corrupt. i need more learning etc. maths/physics/cs/ai/distributed computing etc. maybe get some basic serbian. not so hard. i can get some basic czech too. the guards, hm. they're very shit, but they can change if the top guys attack them. just very hard. regardeless, relying on emotions is too hard. Use weapons. I need more power. ignore everyone else</p>
 </html> 
