--- a/index.html
+++ b/index.html
@@ -1,43 +1,6 @@
 <html>
 
-<h1>2025.11.15</h1>
-<h2>Who am I?</h2>
-  <p>I am currently a refugee seeker in Serbia. I think Serbia is shit. It's full of words only and no action. This is a country of show. Showman. They show brand/outer appearances, and no real action. I hate this country. I think it's a weak country, I think I can take over this place. </p>
-<p>I’m going to take over Serbia. I need quantum etc. I’ll post projects here. I need artificial life.</p>
-  <h2>Things I think I'll need</h2>
-  <ul>
-    <li>Maths</li>
-    <li>Math Engineering</li>
-    <li>Physics</li>
-    <li>Computer Science</li>
-    <li>AI</li>
-    <li>Quantum AI</li>
-    <li>Bioquantum Computers</li>
-    <li>Artificial Life</li>
-    <li>Robots</li>
-    <li>Molecular assemblers/universal constructors</li>
-    <li>automated maths</li>
-    <li>hacking/reverse engineering etc. hacking is very important</li>
-    <li>mobile/apps/bci/merging with tech etc. </li>
-    <li>robots</li>
-    <li>p2p/my own internet/eris net etc. </li>
-    <li>slime mold</li>
-    <li>etc.</li>
-  </ul>
-
-  <p>It is just essential to have a much stronger wifi (hack the routers, spoofing/hardware or get satelite dishes on abandoned buildings/p2p etc.). And for me to understand hacking/reverse engineering, how computers work/wifi/bottom up computing/computers/bioquantum computers/maths/physics/cs/ai etc. there are so many things that I'm lacking at. nand to tetris, nand to jjsploit, nand to synapsex etc. Robots/mobile app programming etc. I need to build robots/exosuits etc. </p>
-  <p>Maybe the plan now is... To just keep on learning. make fun projects etc. mobile apps/ERIsNet/hack roblox/maths/physics/cs/ai etc. keep on learning. I can do this.</p>
-<h1>2025.11.15, 10:31 PM</h1>
-  <p>I am losing hope. I hate the guards in this refugee camp of serbia. i will kill all of them. I'll kill the shit out of all them. I hate them all. they're all liars/showmen etc.</p>
-  <p>I need more knowledge etc. </p>
-  <p>around SJTU time, around 2023, when i was kicked and dropped out from BIT (they didn't kick, but i dropped out before i think would), i thought to myself of using HigherERIs as my meaning. complexities etc. to keep on learning. anything/anything, everything/everything. my own anything/anything, my own everything/everything.</p>
-  <p>I need faster internet. firstly, just hack the shit out of them maybe. And as I dedicate my life to learning random things/maths/physics/cs/ai/bci etc., i will be bound to encounter erisnet/p2p, shimeji/companions etc. i will treat this like a triple/quadruple degree etc. I'll keep going. </p>
-  <p>I will spend my life/time learning maths etc. </p>
-
-  <h1>2025.11.15, 10:44 PM</h1>
-  <p>Change of mindset. I am under a scholarship. Quadruple degree. I'm not a refugee. I'm studying in Serbia, fully funded, free shelter, free food, shit guards. This is prestigious. I will learn my own maths/physics/cs/ai etc. dedicate everything to higher eris etc. keep on fighting.</p>
-  <p>the best way to study is probably by making projects. I must always use projects. nand to tetris/maths etc. i'll do it</p>
-
-  <h1>2026.1.1, 10:38 pm</h1>
-  <p>The serbs, not all are shit. Not all should die. only some, especially some. a palantr system needs to be there. i've become too lazy too. too corrupt. i need more learning etc. maths/physics/cs/ai/distributed computing etc. maybe get some basic serbian. not so hard. i can get some basic czech too. the guards, hm. they're very shit, but they can change if the top guys attack them. just very hard. regardeless, relying on emotions is too hard. Use weapons. I need more power. ignore everyone else</p>
+  <h1>2026.1.1, 10:49 pm</h1>
+  <p>nand to tetris/hacking etc. dna origami/bioquantum computers/biomanufacturing etc. knowledge/books/learning to games/experiences/ai etc. palantr systems/my own everything/networks/reverse engineering games etc.</p>
+  <pp>ErisNET. I need a large-scale, distributed, p2p net. botnet, but in reverse. i will need awus1900 too maybe. lots of routers/swarms of phones etc. with ai/artificial life/ai companions etc. inside.</pp>
 </html> 
