Fix HTML structure and enhance content clarity
Corrected HTML tags and improved text clarity.

--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 
   <h1>2026.1.1, 10:49 pm</h1>
   <p>nand to tetris/hacking etc. dna origami/bioquantum computers/biomanufacturing etc. knowledge/books/learning to games/experiences/ai etc. palantr systems/my own everything/networks/reverse engineering games etc.</p>
-  <pp>ErisNET. I need a large-scale, distributed, p2p net. botnet, but in reverse. i will need awus1900 too maybe. lots of routers/swarms of phones etc. with ai/artificial life/ai companions etc. inside.</pp>
+  <p>ErisNET. I need a large-scale, distributed, p2p net. botnet, buf phones etc. with ai/artificial life/ai companions etc. inside.</p>
+  <p> be it making new computers, bioquantum computers/dna computing/biocomputing/dna origami/knits etc. i don't have the physical tools. cheat engienes/reverse engienering etc. but, i cna do it virtually, digitally, abstractly, the maths/physics etc. the origmi/kirigami etc. i am not wasting this opportunity. i can do this. i need a large scale computer. distributed/p2p etc.</p>
 </html> 
